--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,33 @@
 
 <title>gage website</title>
 
+<style>
+
+body{
+    background: rgb(125, 198, 205);
+    color: rgb(45, 45, 45);
+    padding: 10px;
+    font-family: arial;
+}
+
+header {
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+h1{
+    margin: 10px;
+}
+
+#all-contents{
+    max-width: 800px;
+    margin: auto;
+}
+
+
+
+</style>
+
 </head>
 
 <body>
