--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,50 @@ h1{
     margin: auto;
 }
 
+/* navigation menu */
+
+nav {
+    background: rgb(239, 80, 41);
+    margin: 0 auto;
+    display: flex;
+    padding: 10px;
+}
+
+nav header {
+    display: flex;
+    align-items: center;
+    color: rgb(255, 255, 255);
+    flex: 1;
+}
+
+nav ul{
+    list-style-image: none;
+}
+
+nav li{
+    display: inline-block;
+    padding: 0 10px;
+}
+
+nav a{
+    text-decoration: none;
+    color: #fff;
+}
+
+/*main container area beneath manu*/
+main{
+    background: rgb(245, 238, 219);
+    display: flex;
+}
+
+.content{
+    flex: 1;
+    padding: 15px;
+}
+
+
+
+
 
 
 </style>
