--- a/portfolio.html
+++ b/portfolio.html
@@ -69,10 +69,26 @@ main{
     padding: 15px;
 }
 
+#portfolio{
+    list-style-type: none;
+    padding-left: 9;
+}
 
+#portfolio li{
+    background: #fff;
+    padding: 0px;
+    border-radius: 20px;
+    margin-bottom: 20px;
+}
 
+#portfolio li:hover{
+    background: #eee;
+}
 
-
+#portfolio a{
+    text-decoration: none;
+    color: #545454;
+}
 
 </style>
 
@@ -81,6 +97,17 @@ main{
 <body>
 
 <div id="all-contents">
+
+<nav>
+
+<header>Sheba's Glorious Website</header>
+
+<ul>
+    <li><a herf="index.html">home</a></li>
+    <li><a herf="portfolio.html">porflio</a></li>
+</ul>
+
+</nav>
 
 </div>
 
