--- a/portfolio.html
+++ b/portfolio.html
@@ -109,6 +109,13 @@ main{
 
 </nav>
 
+<main>
+    <div class="content">
+        <h1>portfolio</h1>
+        <ul id="portfolio"></ul>
+    </div>
+</main>
+
 </div>
 
 </body>
